--- a/styles/headers.css
+++ b/styles/headers.css
@@ -19,9 +19,11 @@
 
 #nav li:hover ul				{display:block;}
 
+.submenu						{z-index:2;
+								 position:absolute;}
+
 .submenu li						{border-bottom:solid 1px #333333;
-								 font-size:12px;
-								 z-index:2}
+								 font-size:12px;}
 
 .submenu img					{display:inline;
 								 vertical-align:middle;
